fix layout UI, add attendants

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,11 @@
     vertical-align: text-top;
   }
 }
+
+[data-fancybox] {
+  cursor: pointer;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 100%;
